# tink-rust

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  Cargo.toml  LICENSE  README.md  deny.toml  index.html
aead/: CHANGELOG.md  Cargo.toml  README.md
aead/benches/: benchmark.rs  benchmarks.rs
aead/src/: aead_factory.rs  aead_key_templates.rs  aes_ctr_hmac_aead_key_manager.rs  aes_gcm_key_manager.rs  aes_gcm_siv_key_manager.rs  chacha20poly1305_key_manager.rs  kms_envelope_aead.rs  kms_envelope_aead_key_manager.rs  lib.rs  xchacha20poly1305_key_manager.rs
aead/src/subtle/: aead.rs  aes_ctr.rs  aes_gcm.rs  aes_gcm_siv.rs  chacha20poly1305.rs  encrypt_then_authenticate.rs  ind_cpa.rs  mod.rs  xchacha20poly1305.rs
aead/tests/: aead_factory_test.rs  aead_key_templates_test.rs  aes_ctr_hmac_aead_key_manager_test.rs  aes_gcm_key_manager_test.rs  aes_gcm_siv_key_manager_test.rs  chacha20poly1305_key_manager_test.rs  integration_test.rs  kms_envelope_aead_test.rs  kms_envelope_key_manager_test.rs  xchacha20poly1305_key_manager_test.rs
aead/tests/subtle/: aead_test.rs  aes_ctr_test.rs  aes_gcm_siv_test.rs  aes_gcm_test.rs  chacha20poly1305_test.rs  encrypt_then_authenticate_test.rs  mod.rs  wycheproof.rs  xchacha20poly1305_test.rs  xchacha20poly1305_vectors.rs
core/: CHANGELOG.md  Cargo.toml  README.md
core/src/: aead.rs  deterministic_aead.rs  hybrid_decrypt.rs  hybrid_encrypt.rs  lib.rs  mac.rs  prf.rs  signer.rs  utils.rs  verifier.rs
core/src/cryptofmt/: mod.rs
core/src/keyset/: binary_io.rs  handle.rs  insecure.rs  json_io.rs  manager.rs  mem_io.rs  mod.rs  reader.rs  validation.rs  writer.rs
core/src/primitiveset/: mod.rs
core/src/registry/: key_manager.rs  key_templates.rs  kms_client.rs  mod.rs
core/src/subtle/: hkdf.rs  mod.rs  random.rs
daead/: CHANGELOG.md  Cargo.toml  README.md
daead/benches/: benchmark.rs  benchmarks.rs
daead/src/: aes_siv_key_manager.rs  factory.rs  key_templates.rs  lib.rs  subtle.rs
daead/src/subtle/: boring.rs  mod.rs
daead/tests/: aes_siv_key_manager_test.rs  aes_siv_test.rs  factory_test.rs  integration_test.rs  key_templates_test.rs
examples/aead/: Cargo.toml
examples/aead/src/: main.rs
hybrid/: CHANGELOG.md  Cargo.toml  README.md
hybrid/benches/: benchmarks.rs
hybrid/src/: ecies_aead_hkdf_dem_helper.rs  ecies_aead_hkdf_private_key_manager.rs  ecies_aead_hkdf_public_key_manager.rs  hybrid_decrypt_factory.rs  hybrid_encrypt_factory.rs  hybrid_key_templates.rs  lib.rs
hybrid/src/subtle/: ecies_aead_hkdf_dem_helper.rs  ecies_aead_hkdf_hybrid_decrypt.rs  ecies_aead_hkdf_hybrid_encrypt.rs  ecies_hkdf_recipient_kem.rs  ecies_hkdf_sender_kem.rs  elliptic_curves.rs  mod.rs
integration/awskms/: CHANGELOG.md  Cargo.toml  README.md
integration/awskms/src/: aws_kms_aead.rs  aws_kms_aead_test.rs  aws_kms_client.rs  aws_kms_client_test.rs  lib.rs
integration/awskms/tests/: aws_kms_aead_test.rs  aws_kms_client_test.rs
integration/gcpkms/: CHANGELOG.md  Cargo.toml  README.md
integration/gcpkms/src/: default_sa.rs  gcp_kms_aead.rs  gcp_kms_client.rs  lib.rs
mac/: CHANGELOG.md  Cargo.toml  README.md
mac/benches/: benchmarks.rs
mac/src/: aes_cmac_key_manager.rs  factory.rs  hmac_key_manager.rs  key_templates.rs  lib.rs
mac/tests/: aes_cmac_key_manager_test.rs  factory_test.rs  hmac_key_manager_test.rs  integration_test.rs  key_templates_test.rs
no-std-check/: Cargo.toml  deny.toml
no-std-check/src/: main.rs
prf/: CHANGELOG.md  Cargo.toml  README.md
prf/benches/: benchmarks.rs
prf/src/: aes_cmac_prf_key_manager.rs  hkdf_prf_key_manager.rs  hmac_prf_key_manager.rs  key_templates.rs  lib.rs  set_factory.rs
prf/tests/: aes_cmac_prf_key_manager_test.rs  hkdf_prf_key_manager_test.rs  hmac_prf_key_manager_test.rs  integration_test.rs  mod.rs  prf_key_templates_test.rs  set_factory_test.rs
proto/: CHANGELOG.md  Cargo.toml  README.md  build.rs  hkdf_prf.proto  prf_based_deriver.proto
proto/proto/: aes_cmac_prf.proto  hmac_prf.proto  jwt_hmac.proto  kms_aead.proto  kms_envelope.proto
proto/src/: lib.rs
rinkey/: CHANGELOG.md  Cargo.toml  README.md
rinkey/src/: main.rs
signature/: CHANGELOG.md  Cargo.toml  README.md
signature/benches/: benchmarks.rs
signature/src/: ecdsa_signer_key_manager.rs  ecdsa_verifier_key_manager.rs  ed25519_signer_key_manager.rs  ed25519_verifier_key_manager.rs  lib.rs  proto.rs  signature_key_templates.rs  signer_factory.rs  verifier_factory.rs
signature/tests/: common.rs  ecdsa_signer_key_manager_test.rs  ecdsa_verifier_key_manager_test.rs  ed25519_signer_key_manager_test.rs  ed25519_verifier_key_manager_test.rs  integration_test.rs  signature_factory_test.rs  signature_key_templates_test.rs
streaming/: CHANGELOG.md  Cargo.toml  README.md
streaming/src/: aes_ctr_hmac_key_manager.rs  aes_gcm_hkdf_key_manager.rs  decrypt_reader.rs  lib.rs  streamingaead_factory.rs  streamingaead_key_templates.rs
streaming/tests/: aes_ctr_hmac_key_manager_test.rs  aes_gcm_hkdf_key_manager_test.rs  common.rs  factory_test.rs  integration_test.rs  key_templates_test.rs
testing/: Cargo.toml  build.rs
testing/proto/: testing_api.proto
testing/src/: aead_service.rs  daead_service.rs  hybrid_service.rs  keyset_service.rs  mac_service.rs  main.rs  metadata_service.rs  prf_set_service.rs  signature_service.rs  streaming_service.rs
tests/: Cargo.toml
tests/src/: fakekms.rs  lib.rs  sharedbuf.rs  testdata.rs  wycheproofutil.rs
tests/testdata/: README.md
tests/tests/: aead_test.rs  awskms_test.rs  core_test.rs  daead_test.rs  fakekms_test.rs  gcpkms_test.rs  hybrid_test.rs  integration_test.rs  mac_test.rs  prf_test.rs  signature_test.rs  streaming_test.rs  wycheproofutil_test.rs
testutil/: Cargo.toml
testutil/src/: constant.rs  lib.rs  sharedbuf.rs  wycheproofutil.rs
testutil/tests/: integration_test.rs  wycheproofutil_test.rs
tink/: Cargo.toml  build.rs
tink/src/: aead.rs  deterministic_aead.rs  hybrid_decrypt.rs  hybrid_encrypt.rs  lib.rs  mac.rs  prf.rs  signer.rs  streamingaead.rs  utils.rs  verifier.rs
tink/tests/: integration_test.rs
(+1935 files in other folders)
