[workspace]
members = [
  "aead",
  "daead",
  "examples/aead",
  "examples/daead",
  "examples/keygen",
  "examples/kms",
  "examples/mac",
  "examples/signature",
  "examples/streaming",
  "integration/awskms",
  "mac",
  "prf",
  "proto",
  "rinkey",
  "signature",
  "streaming",
  "testing",
  "testutil",
  "tink",
]

# Patch dependencies on tink crates so that they refer to the versions within this same repository.
[patch.crates-io]
rinkey = { path = "rinkey" }
tink = { path = "tink" }
tink-aead = { path = "aead" }
tink-awskms = { path = "integration/awskms" }
tink-daead = { path = "daead" }
tink-mac = { path = "mac" }
tink-prf = { path = "prf" }
tink-proto = { path = "proto" }
tink-signature = { path = "signature" }
tink-streaming-aead = { path = "streaming" }
tink-testing-server = { path = "testing" }
tink-testutil = { path = "testutil" }
