[workspace]
members = [
  "aead",
  "core",
  "daead",
  "examples/aead",
  "examples/daead",
  "examples/keygen",
  "examples/keymgr",
  "examples/kms",
  "examples/mac",
  "examples/signature",
  "examples/streaming",
  "integration/awskms",
  "integration/gcpkms",
  "mac",
  "prf",
  "proto",
  "rinkey",
  "signature",
  "streaming",
  "tests",
  "testing",
]

# Patch dependencies on tink crates so that they refer to the versions within this same repository.
[patch.crates-io]
# TODO(#7): remove if/when https://github.com/dalek-cryptography/ed25519-dalek/pull/160 is merged.
ed25519-dalek = { git = "https://github.com/daviddrysdale/ed25519-dalek", branch = "rand-bump" }
rinkey = { path = "rinkey" }
tink-aead = { path = "aead" }
tink-awskms = { path = "integration/awskms" }
tink-core = { path = "core" }
tink-daead = { path = "daead" }
tink-gcpkms = { path = "integration/gcpkms" }
tink-mac = { path = "mac" }
tink-prf = { path = "prf" }
tink-proto = { path = "proto" }
tink-signature = { path = "signature" }
tink-streaming-aead = { path = "streaming" }
tink-tests = { path = "tests" }
tink-testing-server = { path = "testing" }
