[workspace]
members = [
  "aead",
  "core",
  "daead",
  "examples/aead",
  "examples/daead",
  "examples/hybrid",
  "examples/keygen",
  "examples/keymgr",
  "examples/kms",
  "examples/mac",
  "examples/prf",
  "examples/signature",
  "examples/streaming",
  "hybrid",
  "integration/awskms",
  "integration/gcpkms",
  "mac",
  "prf",
  "proto",
  "rinkey",
  "signature",
  "streaming",
  "tests",
  "testing",
]

# Patch dependencies on tink crates so that they refer to the versions within this same repository.
[patch.crates-io]
rinkey = { path = "rinkey" }
tink-aead = { path = "aead" }
tink-awskms = { path = "integration/awskms" }
tink-core = { path = "core" }
tink-daead = { path = "daead" }
tink-gcpkms = { path = "integration/gcpkms" }
tink-hybrid = { path = "hybrid" }
tink-mac = { path = "mac" }
tink-prf = { path = "prf" }
tink-proto = { path = "proto" }
tink-signature = { path = "signature" }
tink-streaming-aead = { path = "streaming" }
tink-tests = { path = "tests" }
tink-testing-server = { path = "testing" }
