[package]
name = "tink-aead"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
# Need the `std` feature for Error type conversion
aead = { version = "^0.3.2", features = ["std"] }
aes-ctr = "^0.6"
aes-gcm = "^0.8"
aes-gcm-siv = "^0.9"
chacha20poly1305 = "^0.7"
generic-array = "^0.14"
prost = "^0.6.1"
rand = "^0.7"
tink = "^0.1"
tink-mac = "^0.1"

[dev-dependencies]
base64 = "^0.12"
hex = "^0.4.2"
serde = { version = "^1.0.118", features = ["derive"] }
serde_json = "^1.0.60"
tink-awskms = "^0.1"
tink-signature = "^0.1"
tink-testutil = "^0.1"
