[package]
name = "tink-aead"
version = "0.1.1"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "AEAD functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink", "aead"]
categories = ["cryptography"]

[dependencies]
# Need the `std` feature for Error type conversion
aead = { version = "^0.4.1", features = ["std"] }
aes-ctr = "^0.6"
aes-gcm = "^0.8"
aes-gcm-siv = "^0.9"
chacha20poly1305 = "^0.7"
generic-array = "^0.14"
prost = "^0.7"
rand = "^0.7"
tink-core = "^0.1"
tink-mac = "^0.1"
tink-proto = "^0.1"
