[package]
name = "tink-aead"
version = "0.2.3"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "AEAD functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-aead"
readme = "README.md"
keywords = ["cryptography", "tink", "aead"]
categories = ["cryptography"]

[dependencies]
# Need the `std` feature for Error type conversion
aead = { version = "^0.4.3", features = ["std"] }
aes = { version = "^0.7.4", features = ["ctr"] }
aes-gcm = "^0.9.2"
aes-gcm-siv = "^0.10"
chacha20poly1305 = "^0.9"
generic-array = "^0.14.5"
rand = "^0.7"
tink-core = "^0.2"
tink-mac = "^0.2"
tink-proto = "^0.2"
