[package]
name = "tink-core"
version = "0.2.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Core crate for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink"]
categories = ["cryptography"]

[features]
default = []
# The `insecure` feature enables methods that expose unencrypted key material
insecure = []
# The `json` feature enables methods for serializing keysets to/from JSON.
json = ["tink-proto/json", "serde", "serde_json"]

[dependencies]
digest = "^0.9"
hkdf = "^0.11"
lazy_static = "^1.4"
prost = "^0.8"
rand = "^0.7"
serde = { version = "^1.0.126", features = ["derive"], optional = true }
serde_json = { version = "^1.0.64", optional = true }
sha-1 = "^0.9.7"
sha2 = "^0.9.5"
subtle = "^2.4"
tink-proto = "^0.2"
