[package]
name = "tink-daead"
version = "0.1.1"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Deterministic AEAD functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink", "daead"]
categories = ["cryptography"]

[dependencies]
aead = { version = "^0.4.0", features = ["std"] }
aes-siv = "^0.5"
prost = "^0.7"
tink-core = "^0.1"
tink-proto = "^0.1"
