[package]
name = "tink-daead"
version = "0.3.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Deterministic AEAD functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink", "daead"]
categories = ["cryptography"]

[dependencies]
aead = "^0.4.2"
aes-siv = "^0.6"
prost = { version = "^0.8", default-features = false }
spin = { version = "^0.9.2", features = ["once"] }
tink-core = "^0.3"
tink-proto = "^0.3"
