[package]
name = "tink-daead"
version = "0.2.5"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Deterministic AEAD functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-daead"
readme = "README.md"
keywords = ["cryptography", "tink", "daead"]
categories = ["cryptography"]

[dependencies]
aead = { version = "^0.5.1", features = ["std"] }
aes-siv = "^0.6"
tink-core = "^0.2"
tink-proto = "^0.2"
