[package]
name = "tink-mac"
version = "0.2.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "MAC functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink", "mac"]
categories = ["cryptography"]

[dependencies]
prost = "^0.8"
tink-core = "^0.2"
tink-prf = "^0.2"
tink-proto = "^0.2"
