[package]
name = "tink-prf"
version = "0.2.5"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "PRF functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-prf"
readme = "README.md"
keywords = ["cryptography", "tink", "prf"]
categories = ["cryptography"]

[dependencies]
aes = "^0.7.4"
cmac = "^0.6"
digest = "^0.9"
hkdf = "^0.11"
hmac = "^0.11"
sha-1 = "^0.9.8"
sha2 = "^0.10.2"
tink-core = "^0.2"
tink-proto = "^0.2"
