[package]
name = "tink-prf"
version = "0.2.5"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "PRF functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-prf"
readme = "README.md"
keywords = ["cryptography", "tink", "prf"]
categories = ["cryptography"]

[dependencies]
aes = "^0.8.1"
cmac = "^0.7.1"
digest = "^0.10.5"
hkdf = "^0.12.3"
hmac = { version = "^0.12.1", features = ["reset"] }
sha-1 = "^0.10.0"
sha2 = "^0.10.5"
tink-core = "^0.2"
tink-proto = "^0.2"
