[package]
name = "tink-proto"
version = "0.1.1"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Protocol buffer message definitions for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink", "protobuf"]
categories = ["cryptography"]

[features]
default = []
json = ["base64", "serde"]

[dependencies]
base64 = { version = "^0.13", optional = true }
prost = "^0.7"
serde = { version = "^1.0.126", features = ["derive"], optional = true }

[build-dependencies]
prost-build = "^0.7"
