[package]
name = "tink-proto"
version = "0.3.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Protocol buffer message definitions for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink", "protobuf"]
categories = ["cryptography"]

[features]
default = []
json = ["base64", "serde"]

[dependencies]
base64 = { version = "^0.13", default-features = false, features = ["alloc"], optional = true }
prost = { version = "^0.8", default-features = false }
serde = { version = "^1.0.126", default-features = false, features = ["alloc", "derive"], optional = true }

[build-dependencies]
prost-build = "^0.8"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
