[package]
name = "tink-proto"
version = "0.2.5"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Protocol buffer message definitions for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-proto"
readme = "README.md"
keywords = ["cryptography", "tink", "protobuf"]
categories = ["cryptography"]

[features]
default = []
# The `json` feature enables methods for JSON-serializing keysets with text enum values.
json = ["base64", "serde"]

[dependencies]
base64 = { version = "^0.13", optional = true }
prost = "^0.11"
serde = { version = "^1.0.144", features = ["derive"], optional = true }

[build-dependencies]
prost-build = "^0.11"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
