[package]
name = "rinkey"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
structopt = "^0.3.21"
tink = { version = "^0.1", features = ["insecure", "json"] }
tink-aead = "^0.1"
tink-awskms = "^0.1"
tink-daead = "^0.1"
tink-gcpkms = "^0.1"
tink-mac = "^0.1"
tink-prf = "^0.1"
tink-proto = "^0.1"
tink-signature = "^0.1"
tink-streaming-aead = "^0.1"
