[package]
name = "rinkey"
version = "0.2.3"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Keyset manipulation command-line tool for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
readme = "README.md"
keywords = ["cryptography", "tink"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
structopt = "^0.3.26"
tink-aead = "^0.2"
tink-awskms = "^0.2"
tink-core = { version = "^0.2", features = ["insecure", "json"] }
tink-daead = "^0.2"
tink-gcpkms = "^0.2"
tink-hybrid = "^0.2"
tink-mac = "^0.2"
tink-prf = "^0.2"
tink-proto = "^0.2"
tink-signature = "^0.2"
tink-streaming-aead = "^0.2"
