[package]
name = "rinkey"
version = "0.3.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Keyset manipulation command-line tool for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
readme = "README.md"
keywords = ["cryptography", "tink"]
categories = ["cryptography", "command-line-utilities"]
rust-version = "1.78.0"

[dependencies]
structopt = "^0.3.26"
tink-aead = "^0.3"
tink-awskms = "^0.3"
tink-core = { version = "^0.3", features = ["insecure", "json"] }
tink-daead = "^0.3"
tink-gcpkms = "^0.3"
tink-hybrid = "^0.3"
tink-mac = "^0.3"
tink-prf = "^0.3"
tink-proto = "^0.3"
tink-signature = "^0.3"
tink-streaming-aead = "^0.3"
