[package]
name = "tink-signature"
version = "0.2.5"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Signature functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-signature"
readme = "README.md"
keywords = ["cryptography", "tink", "signature"]
categories = ["cryptography"]

[dependencies]
ecdsa = { version = "^0.13", features = ["der"] }
ed25519-dalek = "^1.0.1"
generic-array = "^0.14.6"
p256 = "^0.9"
rand = "^0.7"
signature = "^1.3"
tink-core = "^0.2"
tink-proto = "^0.2"
