[package]
name = "tink-streaming-aead"
version = "0.2.5"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Streaming AEAD functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-streaming-aead"
readme = "README.md"
keywords = ["cryptography", "tink", "streaming-aead"]
categories = ["cryptography"]

[dependencies]
aes = { version = "^0.7.4", features = ["ctr"] }
# Need the `std` feature for Error type conversion
aes-gcm = { version = "^0.10.1", features = ["std"] }
rand = "^0.7"
tink-core = "^0.2"
tink-mac = "^0.2"
tink-proto = "^0.2"
