[package]
name = "tink-streaming-aead"
version = "0.3.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Streaming AEAD functionality for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-streaming-aead"
readme = "README.md"
keywords = ["cryptography", "tink", "streaming-aead"]
categories = ["cryptography"]

[dependencies]
aes = "^0.8.4"
# Need the `std` feature for Error type conversion
aes-gcm = { version = "^0.10.3", features = ["std"] }
ctr = "^0.9.2"
tink-core = "^0.3"
tink-mac = "^0.3"
tink-proto = "^0.3"
