[package]
name = "tink-testing-server"
version = "0.3.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Testing server for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink"]
categories = ["cryptography"]
publish = false

[dependencies]
env_logger = "^0.9.0"
futures = "^0.3.15"
log = "^0.4.14"
prost = "^0.8"
structopt = "^0.3.22"
tink-aead = "^0.3"
tink-core = { version = "^0.3", features = [
  "insecure",
  "json",
 ] }
tink-daead = "^0.3"
tink-mac = "^0.3"
tink-prf = "^0.3"
tink-proto = "^0.3"
tink-signature = "^0.3"
tink-streaming-aead = "^0.3"
tink-tests = "^0.3"
tokio = { version = "^1.8", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tonic = "^0.5"

[build-dependencies]
tonic-build = "^0.5"
