[package]
name = "tink-testing-server"
version = "0.2.4"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Testing server for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink"]
categories = ["cryptography"]
publish = false

[dependencies]
env_logger = "^0.9.0"
futures = "^0.3.21"
log = "^0.4.17"
prost = "^0.9"
structopt = "^0.3.26"
tink-aead = "^0.2"
tink-core = { version = "^0.2", features = [
  "insecure",
  "json",
 ] }
tink-daead = "^0.2"
tink-hybrid = "^0.2"
tink-mac = "^0.2"
tink-prf = "^0.2"
tink-proto = "^0.2"
tink-signature = "^0.2"
tink-streaming-aead = "^0.2"
tink-tests = "^0.2"
tokio = { version = "^1.16", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tonic = "^0.6"

[build-dependencies]
tonic-build = "^0.8"
