[package]
name = "tink-tests"
version = "0.2.5"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Tests for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink", "testing"]
categories = ["cryptography"]
publish = false

[dependencies]
base64 = "^0.13"
ed25519-dalek = "^1.0.1"
generic-array = "^0.14.6"
hex = "^0.4.3"
p256 = { version = "^0.10", features = ["pkcs8"] }
rand = "^0.7"
regex = "^1.6.0"
serde = { version = "^1.0.143", features = ["derive"] }
serde_json = "^1.0.83"
tink-core = { version = "^0.2", features = ["insecure", "json"] }
tink-aead = "^0.2"
tink-daead = "^0.2"
tink-hybrid = "^0.2"
tink-mac = "^0.2"
tink-proto = "^0.2"

[dev-dependencies]
base64 = "^0.13"
hex = "^0.4.3"
lazy_static = "^1.4"
maplit = "^1.0.2"
num-bigint = "^0.4.3"
tempfile = "^3.3"
tink-aead = "^0.2"
tink-awskms = "^0.2"
tink-daead = "^0.2"
tink-gcpkms = "^0.2"
tink-mac = "^0.2"
tink-prf = "^0.2"
tink-signature = "^0.2"
tink-streaming-aead = "^0.2"
