[package]
name = "tink-tests"
version = "0.3.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Tests for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
keywords = ["cryptography", "tink", "testing"]
categories = ["cryptography"]
publish = false

[dependencies]
base64 = "^0.22"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
generic-array = "^0.14.7"
hex = "^0.4.3"
p256 = { version = "^0.13.2", features = ["ecdsa", "pkcs8"] }
rand = "^0.8"
regex = "^1.10.5"
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "^1.0.120"
tink-core = { version = "^0.3", features = ["insecure", "json"] }
tink-aead = "^0.3"
tink-daead = "^0.3"
tink-hybrid = "^0.3"
tink-mac = "^0.3"
tink-proto = "^0.3"

[dev-dependencies]
base64 = "^0.22"
hex = "^0.4.3"
lazy_static = "^1.5"
maplit = "^1.0.2"
num-bigint = "^0.4.6"
tempfile = "^3.3"
tink-aead = "^0.3"
tink-awskms = "^0.3"
tink-daead = "^0.3"
tink-gcpkms = "^0.3"
tink-mac = "^0.3"
tink-prf = "^0.3"
tink-signature = "^0.3"
tink-streaming-aead = "^0.3"
