[package]
name = "tink-testutil"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
ed25519-dalek = "*"
elliptic-curve = "*"
generic-array = "*"
hex = "*"
p256 = { version = "*", features = ["ecdsa"] }
prost = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
# Depending on tink-testutil will turn on the `insecure` feature of `tink`.
tink = { version = "*", features = ["insecure"] }
tink-daead = "*"
tink-mac = "*"

[dev-dependencies]
serde_json = "*"
