[package]
name = "tink-testutil"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
ed25519-dalek = "^1.0.1"
generic-array = "^0.14.4"
hex = "^0.4.2"
p256 = { version = "^0.6", features = ["ecdsa"] }
prost = "^0.6.1"
rand = "^0.7"
serde = { version = "^1.0.118", features = ["derive"] }
# Depending on tink-testutil will turn on the `insecure` feature of `tink`.
tink = { version = "^0.1", features = ["insecure"] }
tink-daead = "^0.1"
tink-mac = "^0.1"

[dev-dependencies]
serde_json = "^1.0.60"
