[package]
name = "tink"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"

[features]
insecure = []

[dependencies]
digest = "*"
hkdf = "*"
lazy_static = "*"
prost = "*"
rand = "*"
sha-1 = "*"
sha2 = "*"
subtle = "*"

[build-dependencies]
prost-build = "*"

[dev-dependencies]
base64 = "*"
hex = "*"
tink-mac = "*"
tink-testutil = "*"
