[package]
name = "tink"
version = "0.1.0"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = []
# The `insecure` feature enables methods that expose unencrypted key material
insecure = []
# The `json` feature enables methods for serializing keysets to/from JSON.
json = ["base64", "serde", "serde_json"]

[dependencies]
base64 = { version = "^0.12", optional = true }
digest = "^0.9"
hkdf = "^0.10"
lazy_static = "^1.4"
prost = "^0.6.1"
rand = "^0.7"
serde = { version = "^1.0.118", features = ["derive"], optional = true }
serde_json = { version = "^1.0.60", optional = true }
sha-1 = "=0.9.1"
sha2 = "=0.9.1"
subtle = "^2.4"

[build-dependencies]
prost-build = "^0.6.1"

[dev-dependencies]
base64 = "^0.12"
hex = "^0.4.2"
tink-aead = "^0.1"
tink-mac = "^0.1"
tink-signature = "^0.1"
tink-testutil = "^0.1"
