[package]
name = "tink-awskms"
version = "0.2.5"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "AWS-KMS integration for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-awskms"
readme = "README.md"
keywords = ["cryptography", "tink", "kms", "aws"]
categories = ["cryptography"]

[dependencies]
csv = "^1.2.1"
hex = "^0.4.3"
regex = "^1.7.1"
rusoto_core = "^0.48"
rusoto_credential = "^0.48"
rusoto_kms = "^0.48"
tink-core = "^0.2"
# Match the version of tokio required by rusoto_* v0.46.0
tokio = "^1.16"
