[package]
name = "tink-gcpkms"
version = "0.2.3"
authors = ["David Drysdale <drysdale@google.com>"]
edition = "2018"
license = "Apache-2.0"
description = "AWS-KMS integration for Rust port of Google's Tink cryptography library"
repository = "https://github.com/project-oak/tink-rust"
documentation = "https://docs.rs/tink-gcpkms"
readme = "README.md"
keywords = ["cryptography", "tink", "kms", "gcp"]
categories = ["cryptography"]

[dependencies]
base64 = "^0.13"
chrono = "^0.4"
futures = "^0.3"
http = "^0.2"
hyper = { version = "^0.14.17", features = ["client", "http1", "http2"] }
hyper-rustls = "^0.22.1"
lazy_static = "^1.4"
percent-encoding = "^2.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0.72"
tink-core = "^0.2"
tokio = "^1.15"
yup-oauth2 = "^5.1"
